Updated restaurant site

--- a/Restaurant/home.html
+++ b/Restaurant/home.html
@@ -19,7 +19,7 @@ color: #0d1f2d
 <body>
 
 <main>
-div class="container"/>
+<div class="container"/>
 <header>
 <h1>Sydney's Seafood Kitchen</h1>
 </header>
@@ -36,7 +36,7 @@ div class="container"/>
 <div class="row">
 <div class="col-lg-3 col-md">
 <img src="images/seafood2.jpg" alt="Restaurant Picture." 
-style="border: thick black solid; width="200px;"/>
+style="border: thick black solid; width:400px;/>
 </div>
 <div class="col-lg-9 col-md">
 <h2><em>Restaurant Description</em></h2>
