--- a/Restaurant/menu.html
+++ b/Restaurant/menu.html
@@ -16,8 +16,14 @@ text-align: center;
 th {
 height: 25px;
 }
-tbody tr:nth-child(even) {
-background-color: lemonchiffon;
+#tb1Beverage tr:nth-child(even) {
+background-color: lightgray;
+}
+#tb1Beverage {
+cellspacing="0";
+cellpadding="0";
+border: thin solid black;
+padding= 5px 10px;
 }
 </style>
 </head>
@@ -38,7 +44,7 @@ background-color: lemonchiffon;
 </nav>
 
 <section>
-<table>
+<table id="tb1Food">
 <tr>
 <th>Crab & Shrimp Grits</th>
 <th>Deep Fried Lobster Tails</th>
@@ -64,7 +70,7 @@ background-color: lemonchiffon;
 
 <section>
 
-<table>
+<table id="tb1Beverage">
 <thead>
 <tr>
 <th colspan="2">Beverages</th>
