--- a/Restaurant/contact.html
+++ b/Restaurant/contact.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html>
+<html>
 <head>
+<meta charset="utf-8">
+                <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <title>Sydney Restaurant</title>
-<link href="styles/restaurantStyles.css" rel="stylesheet" type="text/css"/>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+<link href="restaurantStyles.css" rel="stylesheet" type="text/css"/>
+<script src="https://kit.fontawesome.com/137b6a5979.js"></script>
+<link rel="styesheet" type="text/css" href="file:///C:Users/HP-Pavilion/Desktop/font%20awsm/fontawesome-free-5.6.3-web/css/all.css">
 <style>
+header {
+	background-color: black;
+	color: gold;
+	height: 100px;
+	text-align: center;
+	padding: 30px 10px 20px 10px;
+	}
 label, fieldset {
 font-weight: bold;
 }
@@ -11,6 +24,29 @@ width: 100%;
 padding: 12px 20px;
 margin: 12px 0;
 box-sizing: border-box;
+}
+footer {
+	background-color: black;
+	color: gold;
+	height: 100px;
+	text-align: center;
+	padding: 30px 10px 20px 10px;
+	}
+	.nav-link {
+	font-size: 1.1em !important;
+	text-align: center;
+	float: none;
+	display:inline-block;
+	color: red;
+}
+nav a:hover {
+	font-weight: bold;
+}
+nav a:active {
+	text-decoration: none
+}
+nav a:visited {
+	color: darkblue;
 }
 </style>
 </head>
@@ -21,63 +57,117 @@ box-sizing: border-box;
 <header>
 <h1>Sydney's Seafood Kitchen</h1>
 </header>
+<noscript>
+<!--Inform users who have Javascript disabled that site is best viewed with in enabled.-->
+<p style="color: red">Your browser does not support Javascript or it is disabled. This site is best viewed with Javascript.</p>
+</noscript>
 
 <nav><!--The navigation elements will navigate to links-->
 <hr/>
-<p><a href="home.html">Home</a></p>
-<p><a href="menu.html">Menu</a></p>
-<p><a href="contact.html">Contact Us</a></p>
-<hr/>
+<ul class="nav nav-pills">
+<li class="nav-item">
+<a class="nav-link" href="home.html"><i class="fas fa-home"></i></a>
+</li>
+<li class="nav-item">
+<a class="nav-link menu" href="menu.html">Menu</a>
+</li>
+<li class="nav-item">
+<a class="nav-link contact" href="contact.html">Contact Us</a>
+</li>
+</ul>
 </nav>
 
 <form action="submit.html" method="POST">
+<form class="needs validation" novalidate>
+<div class="form-row">
+<div class="col-sm-8">
 <label for="name">Name:</label><br/>
-<input type="text" id="name" name="name"> <br/>
+<input type="text" class="form-control" id="name" placeholder="name" value="Sydney Mason" required>
+<div class="valid-feedback">
+Looks good!
+</div>
+</div>
+<div class="col-sm-8">
 <label for="email">Email:</label><br/>
-<input type="text" id="email" name="email"><br/>
+<input type="text" class="form-control" id="email" placeholder="Enter email" value="" required>
+<div class="valid-feedback">
+Looks good!
+</div>
+</div>
+<div class="col-sm-8">
 <label for="phone">Phone Number:</label><br/>
-<input type="text" id="phone" name="phone"><br/>
+<input type="text" class="form-control" id="phone" placeholder="Enter phone number" value="xxx-xxx-xxxx" required>
+<div classs="valid-feedback">
+Please provide your phone number.
+</div>
+</div>
+<div class="form-group">
 <label for="contact">Reason for Inquiry:</label><br/>
 <select id="contact" name="contact">
 <option value="default" selected>--Catering--</option>
 <option value="private party">Private Party</option>
 <option value="feedback">Feedback</option>
 <option value="other">Other</option>
+</form>
 </select>
 <br/>
 
+<div class="form-group">
+<div class="col-sm-8">
 <label for="info">Additional Information</label><br/>
-<textarea id="info" name="info"></textarea>
+<textarea id="info" class="form-control" rows="3"></textarea>
+</div>
 
 <fieldset>
 <legend>Have you been to the restaurant?</legend><br/>
+<div class="form-check">
 <input type="radio" id="choice1" name="questionnaire" value="yes">
 <label for="choice1">Yes</label><br/>
 <input type="radio" id="choice2" name="questionnaire" value="no">
-<label for="choice2">No</label><br/>
+<label for="choice2">No</label>
+</div>
 </fieldset>
 
-<fieldet>
+<fieldset>
 <legend>Best days to contact you:</legend><br/>
-<input type="checkbox" id=Monday" name="interest" value="Monday">
-<label for="Monday">M</label><br>
-<input type="checkbox" id="Tuesday" name="interest" vale="Tuesday">
-<label for="Tuesday">T</label><br/>
-<input type="checkbox" id="Wednesday" name="interest" value="Wednesday">
-<label for="Wednesday">W</label><br/>
-<input type="checkbox" id="Thursday" name="interest" vale="Thursday">
-<label for="Thursday">Th</label><br/>
-<input type="checkbox" id="Friday" name="interest" value="Friday">
-<label for="Friday">F</label><br/>
+<div class="col-sm-8">
+<div class="form-check">
+<input class="form-check-input" type="checkbox" id="Monday" name="interest" value="Monday">
+<label class="form-check-label" for="Monday">M</label>
+</div>
+<div class="form-check">
+<input class="form-check-input" type="checkbox" id="Tuesday" name="interest" value="Tuesday">
+<label class="form-check-label" for="Tuesday">T</label>
+</div>
+<div class="form-check">
+<input class="form-check-input" type="checkbox" id="Wednesday" name="interest" value="Wednesday">
+<label class="form-check-label" for="Wednesday">W</label>
+</div>
+<div class="form-check">
+<input class="form-check-input" type="checkbox" id="Thursday" name="interest" value="Thursday">
+<label class="form-check-label" for="Thursday">Th</label>
+</div>
+<div class="form-check">
+<input class="form-check-input" type="checkbox" id="Friday" name="interest" value="Friday">
+<label class="form-check-label" for="Friday">F</label>
+</div>
+</fieldset>
 
-<input type="submit" name="submit" value="Submit">
+<div class="col-md-8">
+<button type="button" class="btn btn-primary">Submit</button>
+</div>
 
-<footer>
+<div class="footer container-fluid">
+<div class="row">
 <hr/>
-<p>287 Peachtreet Street, Atlanta, GA 30303</p>
-<p>678.522.0347</p>
-</footer>
-</main>
+<h4 id="addressInformation">287 Peachtree Street, Atlanta, GA 30303</br>
+678.234.7192</h4>
+</div>
+</div>
 
+<!-- CDN links copied from https://getbootstrap.com/docs/4.1/getting-started/introduction/ -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
