--- a/Restaurant/home.html
+++ b/Restaurant/home.html
@@ -4,54 +4,152 @@ Name: Sydney Mason
 Date Created: September 2, 2019
 Most recent revision:
 -->
+<html lang="en">
 <head>
+<meta charset="utf-8">
+                <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 <title>Sydney's Restaurant</title>
-<link href="styles/restaurantStyles.css" rel="stylesheet" type="text/css"/>
-</head>
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+<link href="restaurantStyles.css" rel="stylesheet" type="text/css"/>
+<script src="https://kit.fontawesome.com/137b6a5979.js"></script>
+<link rel="styesheet" type="text/css" href="file:///C:Users/HP-Pavilion/Desktop/font%20awsm/fontawesome-free-5.6.3-web/css/all.css">
 <style>
+header {
+	background-color: black;
+	color: gold;
+	height: 100px;
+	text-align: center;
+	padding: 30px 10px 20px 10px;
+	}
 body {
+height: 100%;
+width: 100%;
 background-color: tan;
 font-family: ariel, helvetica, sans-serif;
 color: #0d1f2d
 }
+#mainImage {
+border:2px solid black;
+}
+.slector-for-some-widget {
+box-sizing: content-box;
+}
 </style>
+</head>
 
 <body>
 
-<main>
-<div class="container"/>
-<header>
+<div class="header container-fluid">
+<div class="row">
 <h1>Sydney's Seafood Kitchen</h1>
-</header>
-
+<!--Inform users who have Javascript disabled that site is best viewed with in enabled.-->
+<noscript>
+<p style="color: red">Your browser does not support Javascript or it is disabled. This site is best viewed with Javascript.</p>
+</noscript>
+</div>
+<div class="row">
 <nav><!--The navigation elements will navigate to links-->
 <hr/>
-<p><a href="home.html">Home</a></p>
-<p><a href="menu.html">Menu</a></p>
-<p><a href="contact.html">Contact Us</a></p>
+<ul class="nav nav-pills">
+<li class="nav-item active">
+<a class="nav-link" href="home.html"><i class="fas fa-home"></i></a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="menu.html">Menu</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="contact.html">Contact Us</a>
+</li>
+</ul>
 <hr/>
-</nav>
-
-<section>
-<div class="row">
-<div class="col-lg-3 col-md">
-<img src="images/seafood2.jpg" alt="Restaurant Picture." 
-style="border: thick black solid; width:400px;/>
-</div>
-<div class="col-lg-9 col-md">
-<h2><em>Restaurant Description</em></h2>
-<p>Sydney's Seafood Kitchen is based out of downtown Atlanta, GA. Our menu is inspired by a cajun American southern seafood twang. It's a great atmosphere welcoming all seafood and soul food lovers. There's great music and great food. Seafood lovers from all over gather for our Crab & Shrimp Grits, Deep Fried Lobster Tails, Cajun Fried Catfish & Three Cheese Macaroni, and our fans favorite Hennessy Peach Cobbler. We're open everyday 11AM until 10PM Monday through Thursday and 11AM until midnight on Friday through Sunday. Come hang out with us, listen to some great music, and enjoy great service and great food.</p>
-</div>
-</section>
 </div>
 </div>
-
-<footer>
+ 
 <hr/>
-<p>287 Peachtree Street, Atlanta, GA 30303</p>
-<p> 
-</footer>
-</main>
+<!--Image Slider -->
+<div id="slides" class="carousel slide" data-ride="carousel">
+<ul class="carousel-indicators">
+    <li data-target="slides" data-slide-to="0" class="active"></li>
+    <li data-target="slides" data-slide-to="1"></li>
+    <li data-target="slides" data-slide-to="2"></li>
+  </ul>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+	<img class="d-block w-100" src="Images/comingsoon.jpg" alt="Coming Soon">
+      <div class="carousel-caption d-none d-md-block">
+	  <h3 class="text-center">We're Opening a New Location January 2020!!</h3>
+	  <h4>The new location will be on Collins Avenue in Miami, FL!</h4>
+    </div>
+	</div>
+    <div class="item">
+	<img class="d-block w-100" src="Images/margaritas.jpg" alt="Strawberry Peach Margaritas">
+	<div class="carousel-caption d-none d-md-block">
+      <h3 class="text-center">We're rolling out our seasonal menu, with special options for the New Year!"</h3>
+	  <h4>Henny Peach Cobbler & Strawberry Peach Margaritas will be on the menu!!</h4>
+    </div>
+	</div>
+    <div class="item">
+	<img class="d-block w-100" src="Images/beer.jpg" alt="Cold Brew">
+	<div class="carousel-caption d-none d-md-block">
+      <h3 class="text-center">The Drink of the Month is SG Special Brew."</h3>
+    </div>
+  </div>
+  </div>
 
+  <!-- Left and right controls -->
+  <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	<span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+	<span class="sr-only">Next</span>
+  </a>
+  </div>
+  
+  
+  <!-- Jumbotron -->
+ <div class="container-fluid">
+  <div class="row jumbotron">
+  <div class="col-sm-12 col-md-9 col-lg-9 col-xl-9">
+  <h2 class="text-center">We're Opening a New Location January 2020!!<br/> The new location will be located in Miami, FL!!</h2>
+  </div>
+  </div> 
+
+<div class="main container-fluid padding">
+<div class="row welcome text-center">
+<div class="col-12">
+<!--div for picture-->
+<img id="mainImage" src="images/seafood2.jpg" class="figure-img img-fluid rounded" alt="Restaurant Picture.">
+</div>
+</div>
+</div>
+<div class="row welcome text-center">
+<div class="col-12">
+<h2 class="text-center mt-5">Restaurant Description</h2>
+</div>
+<hr/>
+<div class="col-12">
+<p class="text-center mt-3">
+Sydney's Seafood Kitchen is based out of downtown Atlanta, GA. Our menu is inspired by a cajun American southern seafood twang. It's a great atmosphere welcoming all seafood and soul food lovers. There's great music and great food.<br/>
+Seafood lovers from all over gather for our Crab & Shrimp Grits, Deep Fried Lobster Tails, Cajun Fried Catfish & Three Cheese Macaroni, and our fans favorite Hennessy Peach Cobbler. We're open everyday 11AM until 10PM Monday through Thursday and 11AM until midnight on Friday through Sunday. Come hang out with us, listen to some great music, and enjoy great service and great food.</p>
+</p>
+</div>
+</div>
+
+
+<div class="footer container-fluid">
+<hr/>
+<h4 id="addressInformation">287 Peachtree Street, Atlanta, GA 30303</br>
+678.234.7192</h4>
+</div>
+</div>
+
+<!-- CDN links copied from https://getbootstrap.com/docs/4.1/getting-started/introduction/ -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
