--- a/Restaurant/contact.html
+++ b/Restaurant/contact.html
@@ -48,6 +48,13 @@ nav a:active {
 nav a:visited {
 	color: darkblue;
 }
+.footer{
+  background-color: black;
+	color: gold;
+	height: 100px;
+	text-align: center;
+	padding: 30px 10px 20px 10px;
+}
 </style>
 </head>
 
@@ -77,31 +84,33 @@ nav a:visited {
 </ul>
 </nav>
 
+
+
 <form action="submit.html" method="POST">
 <form class="needs validation" novalidate>
 <div class="form-row">
-<div class="col-sm-8">
+<div class="col-sm-8" style="padding:20px;">
 <label for="name">Name:</label><br/>
 <input type="text" class="form-control" id="name" placeholder="name" value="Sydney Mason" required>
 <div class="valid-feedback">
 Looks good!
 </div>
 </div>
-<div class="col-sm-8">
+<div class="col-sm-8" style="padding:20px;">
 <label for="email">Email:</label><br/>
 <input type="text" class="form-control" id="email" placeholder="Enter email" value="" required>
 <div class="valid-feedback">
 Looks good!
 </div>
 </div>
-<div class="col-sm-8">
+<div class="col-sm-8" style="padding:20px;">
 <label for="phone">Phone Number:</label><br/>
 <input type="text" class="form-control" id="phone" placeholder="Enter phone number" value="xxx-xxx-xxxx" required>
 <div classs="valid-feedback">
 Please provide your phone number.
 </div>
 </div>
-<div class="form-group">
+<div class="form-group" style="padding:20px;">
 <label for="contact">Reason for Inquiry:</label><br/>
 <select id="contact" name="contact">
 <option value="default" selected>--Catering--</option>
@@ -156,11 +165,11 @@ Please provide your phone number.
 <div class="col-md-8">
 <button type="button" class="btn btn-primary">Submit</button>
 </div>
-
-<div class="footer container-fluid">
-<div class="row">
+</form>
 <hr/>
-<h4 id="addressInformation">287 Peachtree Street, Atlanta, GA 30303</br>
+<div class="footer container-fluid">
+<div class="col-lg-12">
+<h4 id="addressInformation">287 Peachtree Street, Atlanta, GA 30303<br/>
 678.234.7192</h4>
 </div>
 </div>
