Updated Restaurant site

--- a/Restaurant/home.html
+++ b/Restaurant/home.html
@@ -150,7 +150,7 @@ box-sizing: content-box;
 </div>
 <div class="row welcome text-center">
 <div class="col-12">
-<h2 class="text-center mt-5">About Us</h2>
+<h2 class="text-center mt-5"><b>About Us</b></h2>
 </div>
 <div class="col-12">
 <h4 class="text-center mt-3" style="padding: 20px;">
