--- a/Restaurant/menu.html
+++ b/Restaurant/menu.html
@@ -117,7 +117,7 @@ nav a:visited {
 <body>
 
 <div class="header container-fluid">
-<div class="row">
+<div class="row" style="padding:10px;">
 <h1>Sydney's Seafood Kitchen</h1>
 <!--Inform users who have Javascript disabled that site is best viewed with in enabled.-->
 <noscript>
@@ -144,28 +144,28 @@ nav a:visited {
   
 
 <div class="main container-fluid">
-<caption><h1 class="text-center mt-5">Food Delightz</h1></caption>
+<caption><h1 class="text-center mt-5"><b>Food Delightz</b></h1></caption><hr/>
 <div class="row welcome text-center">
 <div class="col-12 menu">
 <table id="tb1Food" class="table table-borderless">
 <tr>
-<th scope="col">Crab & Shrimp Grits</th>
-<th scope="col">Deep Fried Lobster Tails</th>
-<th scope="col">Cajun Fried Catfish Dinner<th>
+<th scope="col"><b>Crab & Shrimp Grits</b></th>
+<th scope="col"><b>Deep Fried Lobster Tails</b></th>
+<th scope="col"><b>Cajun Fried Catfish Dinner</b><th>
 </tr>
 <tbody>
 <tr>
-<td><i>Cajun crab & lobsters chunks served over corn grits with a cream sauce.<br/>$26</i></td>
-<td><i>Two lobster tails fried and dipped in cajun butter, served with two sides.<br/>$28</i></td>
-<td><i>Two Buttermilk cajun fried catfish filets served with two sides.<br/>$24</i></td>
+<td><i>Cajun crab & lobsters chunks served over corn grits with a cream sauce.<br/><b>$26</b></i></td>
+<td><i>Two lobster tails fried and dipped in cajun butter, served with two sides.<br/><b>$28</b></i></td>
+<td><i>Two Buttermilk cajun fried catfish filets served with two sides.<br/><b>$24</b></i></td>
 <tr>
-<th scope="col">Crab Stuffed Salmon</th>
-<th scope="col">Baked Crab Mac & Cheese</th>
-<th scope="col">Grilled Garlic Shrimp Alfredo</th>
+<th scope="col"><b>Crab Stuffed Salmon</b></th>
+<th scope="col"><b>Baked Crab Mac & Cheese</b></th>
+<th scope="col"><b>Grilled Garlic Shrimp Alfredo</b></th>
 </tr>
-<td><i>Tender sweet crab, stuffed into salmon filet, marinated and roasted. Served with two sides.<br/>$24</i></td>
-<td><i>Baked in a cast iron skillet, loaded with chunk of crab and cheese. Topped with more fresh crab.<br/>$21</i></td>
-<td><i>Grilled jumbo shrimp, creamy garlic Alfredo, tossed with linguini and broccoli.<br/>$22</i></td>
+<td><i>Tender sweet crab, stuffed into salmon filet, marinated and roasted. Served with two sides.<br/><b>$24</b></i></td>
+<td><i>Baked in a cast iron skillet, loaded with chunk of crab and cheese. Topped with more fresh crab.<br/><b>$21</b></i></td>
+<td><i>Grilled jumbo shrimp, creamy garlic Alfredo, tossed with linguini and broccoli.<br/><b>$22</b></i></td>
 </tbody>
 </table>
 <hr/>
@@ -173,7 +173,7 @@ nav a:visited {
 
 <div class="main container-fluid">
 <thead>
-<caption><h1 class="text-center mt-3">Beverages</h1></caption>
+<caption><h1 class="text-center mt-3"><b>Beverages</b></h1></caption>
 </thead>
 <div class="row welcome text-center">
 <div class="col-12 menu">
