--- a/Restaurant/contact.html
+++ b/Restaurant/contact.html
@@ -32,7 +32,7 @@ footer {
 	text-align: center;
 	padding: 30px 10px 20px 10px;
 	}
-	.nav-link {
+.nav-link {
 	font-size: 1.1em !important;
 	text-align: center;
 	float: none;
@@ -110,7 +110,8 @@ Looks good!
 Please provide your phone number.
 </div>
 </div>
-<div class="form-group" style="padding:20px;">
+<div class="form-group" 
+<div class="col-sm-8" style="padding:20px;">
 <label for="contact">Reason for Inquiry:</label><br/>
 <select id="contact" name="contact">
 <option value="default" selected>--Catering--</option>
@@ -122,7 +123,7 @@ Please provide your phone number.
 <br/>
 
 <div class="form-group">
-<div class="col-sm-8">
+<div class="col-sm-8" style="padding:20px;">
 <label for="info">Additional Information</label><br/>
 <textarea id="info" class="form-control" rows="3"></textarea>
 </div>
@@ -139,7 +140,7 @@ Please provide your phone number.
 
 <fieldset>
 <legend>Best days to contact you:</legend><br/>
-<div class="col-sm-8">
+<div class="col-md-12">
 <div class="form-check">
 <input class="form-check-input" type="checkbox" id="Monday" name="interest" value="Monday">
 <label class="form-check-label" for="Monday">M</label>
@@ -162,13 +163,13 @@ Please provide your phone number.
 </div>
 </fieldset>
 
-<div class="col-md-8">
+<div class="col-md-12">
 <button type="button" class="btn btn-primary">Submit</button>
 </div>
 </form>
 <hr/>
 <div class="footer container-fluid">
-<div class="col-lg-12">
+<div class="col-md-12">
 <h4 id="addressInformation">287 Peachtree Street, Atlanta, GA 30303<br/>
 678.234.7192</h4>
 </div>
